syntax = "proto3";
package moxnotify.indexer;

import "types.proto";

service IndexerService {
  rpc StreamNotifications (IndexerSubscribeRequest) returns (stream moxnotify.types.NotificationMessage);
}

message IndexerSubscribeRequest {}
